--- a/Unidad 1/pagina1.html
+++ b/Unidad 1/pagina1.html
@@ -12,5 +12,18 @@
         <h1>PGY3121</h1>
         <h3>Programación de páginas</h3>
         <h6>WEB</h6>
+        fasdfasdf
+        asdfasdfasd
+        asdfasdfasd
+        <hr>
+        <br>fasdfasdfa
+        asdfasdfasdasdfasdf
+        asdfasdfasd
+        <hr>
+
+        Permite colocar <b>negrilla</b> al texto<br>
+        Permite colocar <u>subrayado</u> al texto<br>
+        Permite colocar <i>en Cursiva</i> el texto<br>
+
     </body>
 </html>
