--- a/Unidad 1/pagina2.html
+++ b/Unidad 1/pagina2.html
@@ -38,7 +38,7 @@
     <ol type="I"> <!-- A a I i -->
         <li>Shingeki no kiojin</li>
         <li>One Pushman</li>
-        <li>One Peace</li>
+        <li>One Piece</li>
         <li>Baki</li>
         <li>Cyber Punk</li>
     </ol>
