--- a/Unidad 1/CSS/paginaCSS3.html
+++ b/Unidad 1/CSS/paginaCSS3.html
@@ -11,8 +11,8 @@
     <h1>Mi Primera Página WEB</h1>
     <p>Esta es mi primera página web de mi carrera</p>
     <p>Tiene como nombre MiPerfil</p>
-    <p> asdfasdfa sdfas dfas df asdf asd fadfasd fasdfasd fasdfasd fasf arg as rgasdfgsd fg sdf</p>
+    <p class="pConBorde"> asdfasdfa sdfas dfas df asdf asd fadfasd fasdfasd fasdfasd fasf arg as rgasdfgsd fg sdf</p>
 
-    <h3>Código CSS escrito en un documento CSS aparte del HTML</h3>
+    <h3 class="cambioBorde">Código CSS escrito en un documento CSS aparte del HTML</h3>
 </body>
 </html>
