--- a/Unidad 1/CSS/paginaCSS6.html
+++ b/Unidad 1/CSS/paginaCSS6.html
@@ -12,5 +12,6 @@
 <body>
     <p><img src="imagen1.jpg" width="50%" height="50%"></p>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quia eveniet quidem dolorum totam! Aliquam esse nesciunt inventore dicta vero nulla molestias ullam quod, hic tempore quasi animi, illo pariatur saepe.</p>
+    <p>rerqwer Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente similique nam possimus voluptates nisi. Tempora voluptate cumque exercitationem reprehenderit amet, nemo atque nostrum praesentium esse? Perspiciatis iste tempore minima dicta.</p>
 </body>
 </html>
