--- a/Unidad 1/CSSBootStrap/PaginaBootstrap.html
+++ b/Unidad 1/CSSBootStrap/PaginaBootstrap.html
@@ -13,10 +13,10 @@
         <h1 style="background-color: aqua;">fasdf</h1>
         <div class="row">
             <div class="col-6 offset-4">
-                Nombre
+                asdfasdf
             </div>
             <div class="col-3">
-                <input type="text">
+                3737878
             </div>            
         </div>
 
