--- a/Unidad 1/CSSBootStrap/PaginaBootstrap3.html
+++ b/Unidad 1/CSSBootStrap/PaginaBootstrap3.html
@@ -60,21 +60,21 @@
                     </div>
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <img src="imagen1.jfif" class="d-block w-100" alt="No disponible">
+                        <img src="imagen1.jfif" class="d-block w-100" style="height: 400px;" alt="No disponible">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>First slide label</h5>
                           <p>Some representative placeholder content for the first slide.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="imagen2.jfif" class="d-block w-100" alt="...">
+                        <img src="imagen2.jfif" class="d-block w-100" style="height: 400px;" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Second slide label</h5>
                           <p>Some representative placeholder content for the second slide.</p>
                         </div>
                       </div>
                       <div class="carousel-item">
-                        <img src="imagen3.jfif" class="d-block w-100" alt="...">
+                        <img src="imagen3.jfif" class="d-block w-100" style="height: 400px;" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h5>Third slide label</h5>
                           <p>Some representative placeholder content for the third slide.</p>
@@ -95,8 +95,8 @@
         </div>
         <hr>
         <div class="row mt-5">
-            <div class="col-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+            <div class="col-12 col-sm-4 col-md-3">
+                <div class="card border-success">
                     <img src="icono.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Logo bonito</h5>
@@ -105,8 +105,8 @@
                     </div>
                   </div>
             </div>
-            <div class="col-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+            <div class="col-12 col-sm-4 col-md-3">
+                <div class="card border-success">
                     <img src="imagen1.jfif" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Logo bonito</h5>
@@ -115,8 +115,8 @@
                     </div>
                   </div>
             </div>
-            <div class="col-4 d-flex justify-content-center">
-                <div class="card" style="width: 18rem;">
+            <div class="col-12 col-sm-4 col-md-3">
+                <div class="card border-success">
                     <img src="imagen3.jfif" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Logo bonito</h5>
