--- a/Unidad 1/CSSBootStrap/PaginaInput.html
+++ b/Unidad 1/CSSBootStrap/PaginaInput.html
@@ -61,6 +61,21 @@
             <div class="col-12 col-md-5"> <input type="week"  class="form-control" >  </div>
         </div>
 
+
+        <div class="row mt-4">
+            <div class="col-12 col-md-2 offset-md-2">ComboBox</div>
+            <div class="col-12 col-md-5">
+                <select name="cmbTipoProducto" class="form-select" id="">
+                    <option value="0">Seleccionar</option>
+                    <option value="1">Correas</option>
+                    <option value="2" selected>Comida</option>
+                    <option value="3">Ropa</option>
+                </select>
+
+            </div>
+        </div>
+
+
         <br>
         <hr>
         <hr>
