--- a/Unidad 1/CSSBootStrap/PaginaInput.html
+++ b/Unidad 1/CSSBootStrap/PaginaInput.html
@@ -71,7 +71,49 @@
                     <option value="2" selected>Comida</option>
                     <option value="3">Ropa</option>
                 </select>
+            </div>
+        </div>
 
+
+        <div class="row mt-4">
+            <div class="col-12 col-md-2 offset-md-2">checkbox</div>
+            <div class="col-12 col-md-5"> 
+                <input type="checkbox" class="form-check-input" value="1">Pokemon  
+                <input type="checkbox" class="form-check-input" value="2">Dragon ball  
+                <input type="checkbox" class="form-check-input" value="3">BAki
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-12 col-md-2 offset-md-2">radio</div>
+            <div class="col-12 col-md-5"> 
+                <input type="radio" name="rdoMovilizacion" class="form-check-input" value="1">auto  
+                <input type="radio" name="rdoMovilizacion" class="form-check-input" value="2">moto  
+                <input type="radio" name="rdoMovilizacion" class="form-check-input" value="3">micro
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col-12 col-md-2 offset-md-2">radio</div>
+            <div class="col-12 col-md-5"> 
+                <input type="radio" name="rdoEstadoCivil" class="form-check-input" value="1">Soltero  
+                <input type="radio" name="rdoEstadoCivil" class="form-check-input" value="2">Casado  
+                <input type="radio" name="rdoEstadoCivil" class="form-check-input" value="3">Viudo
+            </div>
+        </div>
+
+
+        <div class="row mt-4">
+            <div class="col-12 col-md-2 offset-md-2">file</div>
+            <div class="col-12 col-md-5"> 
+                <input type="file" class="form-control">
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-12 col-md-2 offset-md-2">botones</div>
+            <div class="col-12 col-md-5"> 
+                <input type="submit" class="btn btn-danger" value="Enviar">
+                <button class="btn btn-outline-success">Aceptar</button>
             </div>
         </div>
 
