--- a/EA2/PaginaJs.html
+++ b/EA2/PaginaJs.html
@@ -10,9 +10,10 @@
 
 </head>
 <body>
-    <div class="container">     
+    <div class="container">    
+        <!-- navBar --> 
         <h1 class="text-center mt-5">Registro de usuarios</h1>
-        <form action="PaginaJs.html" method="get">
+        <form action="PaginaJs.html" method="post">
             <div class="row mt-5">
                 <div class="col-12 col-md-2 offset-md-2">Nombre</div>
                 <div class="col-12 col-md-6">
