--- a/EA2/PaginaJs2.html
+++ b/EA2/PaginaJs2.html
@@ -25,7 +25,10 @@
                 </div>
                 <div class="form-group mt-2">
                     <label for="numero1">Opciones:</label>
-                    <button class="btn btn-primary float-end" onclick="miFuncion()">Sumar</button>
+                    <button class="btn btn-primary"     onclick="sumar()">Sumar</button>
+                    <button class="btn btn-secondary"   onclick="restar()">Restar</button>
+                    <button class="btn btn-success"     onclick="dividir()">Divivir</button>
+                    <button class="btn btn-warning"     onclick="multiplicar()">Multiplicar</button>
                 </div>
                 <div class="form-group mt-5">
                     <label for="resultado">El resultado es:</label>
