--- a/EA2/paginajQueryValidar.html
+++ b/EA2/paginajQueryValidar.html
@@ -12,6 +12,9 @@
     <input type="text" name="txtRut" class="txtRut" placeholder="Ej:20100300" maxlength="8">
     <input type="text" name="txtDv" class="txtDv" placeholder="Ej:K" maxlength="1" size="1"><br>
     <input type="text" name="txtNombre" class="txtNombre" placeholder="Ej:Juan" maxlength="50"><br>
+    <input type="text" name="txtEmail" class="txtEmail" placeholder="Ej:mail@mail.com" maxlength="50"><br>
+    
     <button class="btnAceptar">Aceptar</button>
+    <button class="btnLimpiar">Limpiar</button>
 </body>
 </html>
