--- a/EA2/consumirServicio.html
+++ b/EA2/consumirServicio.html
@@ -24,6 +24,8 @@
                 });
             });
         });
+        // BUSCAR UN API QUE MUESTRE EL VALOR DE LA UF, DOLAR Y $ARG
+        // OTRA PARA EL TIEMPO(CLIMA)
     </script>    
 </head>
 <body>
