--- a/EA2/consumirServicio.html
+++ b/EA2/consumirServicio.html
@@ -24,8 +24,8 @@
                 });
             });
         });
-        // BUSCAR UN API QUE MUESTRE EL VALOR DE LA UF, DOLAR Y $ARG
-        // OTRA PARA EL TIEMPO(CLIMA)
+        // BUSCAR UN API QUE MUESTRE EL VALOR DE LA UF, DOLAR Y UTM
+        // OTRA PARA EL TIEMPO(CLIMA) y conversor de $cl a dolar, euro y arg
     </script>    
 </head>
 <body>
