--- a/EA2/consumirServicioUFDolarUTM.html
+++ b/EA2/consumirServicioUFDolarUTM.html
@@ -20,7 +20,8 @@
                 });
             });
         });
-        // OTRA PARA EL TIEMPO(CLIMA) y conversor de $cl a dolar, euro y arg
+        // OTRA PARA EL TIEMPO(CLIMA)
+        // conversor de $cl a dolar, euro y $arg
     </script>    
 </head>
 <body>
